styles.css
html,
body {
  margin: 0;
  padding: 0;
  height: 100vh;
  width: 100vw;
}

h1,
h2,
h3,
h4 {
  margin: 0;
  padding: 0;
}

.container {
  height: 100%;
  width: 100%;
  display: grid;
  grid-template: 1fr 5fr / 1fr 4fr;
}

.sidebar {
  grid-row: 1 / 3;
  grid-column: 1 / 2;
  background-color: #1992d4;

  display: grid;
  grid-template: 1fr 8fr / 1fr;
}

header {
  grid-row: 1 / 2;
  grid-column: 2 / 3;
  background-color: white;

  display: grid;
  grid-template: 1fr 2fr / 2fr 1fr;
  grid-template-areas:
    "searchbar userinfo"
    "greeting buttons";
}

main {
  grid-row: 2 / 3;
  grid-column: 2 / 3;
  background-color: #e2e8f0;

  display: grid;
  grid-template: 1fr 1fr / 2fr 1fr;
  grid-template-areas:
    "projects announcements"
    "projects trending";
}

.branding {
  grid-row: 1 / 2;
  grid-column: 1 / 2;

  display: grid;
  grid-template: 1fr / 1fr 3fr;
  justify-items: start;
  align-items: center;
}

.branding img {
  background-color: black;
  width: 50px;
  height: 50px;
}

.navigation {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
}

.searchbar {
  grid-area: searchbar;
}

.userinfo {
  grid-area: userinfo;
}

.greeting {
  grid-area: greeting;
}

.buttons {
  grid-area: buttons;
}

.projects {
  grid-area: projects;
}

.announcements {
  grid-area: announcements;
}

.trending {
  grid-area: trending;
}

